--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
   "author": "Beth Johnson",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1",
-    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.9.6",
     "react-awesome-modal": "^2.0.5",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "webpack": "^2.2.1"
   },
   "dependencies": {
     "react": "^15.4.2",
